--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 	testImplementation("org.mock-server:mockserver-netty:5.7.2")
+
+	testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
+	testImplementation("com.squareup.okhttp3:okhttp:4.9.0")
 }
 
 tasks.named('test') {
