--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.4'
+    id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -10,6 +10,7 @@ sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -31,6 +32,9 @@ dependencies {
 
     // devtools
     implementation("org.springframework.boot:spring-boot-devtools")
+
+    // fast-crud
+    implementation 'com.github.ecsimsw:fast-crud:0.0.2'
 }
 
 test {
